Backport 1.21.9 -> 1.21.6 -> 1.20.1